[package]
name = "daycare-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Window",
    "Document",
    "Element",
    "Event",
    "MouseEvent",
    "console"
] }
gloo-net = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
rstar = "0.11"
geo = "0.27"
gloo-utils = "0.2.0"
gloo-timers = "0.3.0"
log = "0.4"
wasm-logger = "0.2"
serde-wasm-bindgen = "0.6.5"
